Bug 78841 - Crash when formatting bitmap area and clicking on cell in pattern editor
Summary: Crash when formatting bitmap area and clicking on cell in pattern editor
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
4.3.0.0.alpha0+ Master
Hardware: All All
: medium major
Assignee: Caolán McNamara
URL:
Whiteboard: target:4.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2014-05-17 22:41 UTC by Chris Sherlock
Modified: 2014-05-19 10:50 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
console logs + bt with symbols (9.79 KB, text/plain)
2014-05-18 14:15 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Chris Sherlock 2014-05-17 22:41:36 UTC
1. Open Draw
2. Create a rectangular shape
3. Format -> Area
4. Bitmaps
5. Click into a random cell inside the Pattern Editor

After that libo crashes.
Comment 1 Thomas Arnhold 2014-05-18 08:13:00 UTC
NOT occuring on Version: 4.2.4.2 Build ID: 63150712c6d317d27ce2db16eb94c2f3d7b699f

But, I confirm this on master. Maybe this was introduced with the ui-conversion of this tab page?!
Comment 2 Julien Nabet 2014-05-18 14:15:35 UTC
Created attachment 99274 [details]
console logs + bt with symbols

On pc Debian x86-64 with master sources updated today, I could reproduce the crash.
I added console logs because I noticed this:
warn:sfx.control:28641:1:sfx2/source/control/ctrlitem.cxx:43: SfxControllerItem: slot without ...Config-flag at SID 10296
warn:sfx.control:28641:1:sfx2/source/control/ctrlitem.cxx:43: SfxControllerItem: slot without ...Config-flag at SID 5550
Comment 3 Chris Sherlock 2014-05-18 14:58:48 UTC
It's crashing on Window::AcquireGraphics(), line 357:

  pReleaseOutDev->ReleaseGraphics( false );
Comment 4 Chris Sherlock 2014-05-19 09:46:18 UTC
I've made a very basic demo function in svx to see if I can reproduce this. If I add a SvxPixelCtl control to a window, I seem to be able to click on it without any issues. 

I've committed it as a very basic demo:

svx/workben/pixelctl.cxx

See commit http://cgit.freedesktop.org/libreoffice/core/commit/?id=dd7260ed691c077e4c05071d61ee2086ba5bd580
Comment 5 Chris Sherlock 2014-05-19 09:46:57 UTC
Sorry, that should read "demo program", not "demo function".
Comment 6 Commit Notification 2014-05-19 10:47:02 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=12d9ac1f773e88abd0cfa975366db16e42ae4292

Resolves: fdo#78841 crash because parent isn't SvxTabPage



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.