Resolves: fdo#78841 crash because parent isn't SvxTabPage

regression from 60f11adb950e4f9645cc9ecb0f5af8235cc97366

Change-Id: I244dd9fba3dc8230fcac8710a1289151b25dcf6c